fixed layout issues for process manager doc

--- a/css/style.css
+++ b/css/style.css
@@ -702,10 +702,18 @@ footer {
 }
 
 
+/* hash link scroll buffer */
+h2 a:before { 
+  display: block; 
+  content: ' '; 
+  margin-top: -40px; 
+  height: 40px; 
+  visibility: hidden; 
+}
 
-
-
-
+h2 a {
+  color: #353535 !important;
+}
 
 
 /* responsive */
